manifests/base/minio/03-service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-api
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
  type: ClusterIP
