manifests/base/minio/04-service-console.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
spec:
  selector:
    app: minio
  ports:
    - name: console
      port: 9001
      targetPort: 9001
  type: ClusterIP
